kubernetes/prod/ai-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudpulse-ai-service
  namespace: prod
  labels:
    app: cloudpulse-ai-service
    environment: prod

spec:
  type: ClusterIP

  selector:
    app: cloudpulse-ai-service

  ports:
    - name: http
      port: 8000
      targetPort: 8000
