kubernetes/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudpulse-backend
  namespace: prod
  labels:
    app: cloudpulse-backend
    environment: prod

spec:
  type: ClusterIP

  selector:
    app: cloudpulse-backend

  ports:
    - name: http
      port: 9090
      targetPort: 9090
