kubernetes/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudpulse-frontend
  namespace: prod
  labels:
    app: cloudpulse-frontend
    environment: prod

spec:
  type: LoadBalancer

  selector:
    app: cloudpulse-frontend

  ports:
    - name: http
      port: 80
      targetPort: 80
