kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudpulse-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudpulse-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cloudpulse-backend
                port:
                  number: 9090

          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: cloudpulse-ai-service
                port:
                  number: 8000
